# omnican

./: .clang-format  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Kconfig  LEDGER.md  LICENSE  SECURITY.md  scaffold.yml  west.yml
.github/workflows/: ci.yml
.specsmith/: agents.md.bak  agents.md.m006.bak  branch_protection_develop.json  gen_docs.py  id_map.json  import_reqs.py  j1939da_extract.py  j1939da_summary.json  ledger-chain.txt  migration-state.json  read_j1939da.py  reqs.json  requirements.json  testcases.json  tests.json  trace.jsonl
.specsmith/governance/: context-budget.yaml  drift-metrics.yaml  lifecycle.yaml  roles.yaml  rules.yaml  session-protocol.yaml  verification.yaml
docs/: ARCHITECTURE.md  COMPLIANCE.md  FEATURES.md  J1939DA_GAP.md  REQUIREMENTS.md  STANDARDS.md  TESTS.md
docs/governance/: CONTEXT-BUDGET.md  RULES.md
include/omnican/: canopen.h  core.h  j1939.h  obd2.h  omnican.h  uds.h  version.h
src/canopen/: CMakeLists.txt  canopen.c
src/canopen_fd/: CMakeLists.txt  canopen_fd.c
src/core/: CMakeLists.txt  core.c
src/isotp_patch/: CMakeLists.txt  isotp_patch.c
src/j1939/: CMakeLists.txt  j1939.c
src/obd2/: CMakeLists.txt  obd2.c
src/uds/: CMakeLists.txt  uds.c
zephyr/: module.yml
